# rust_actixweb_boilerplate

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.sh  docker-compose.yml
.github/workflows/: ci.yml  slack-notify.yml
config/: app.sample.yml
db/: Dockerfile
migrations/2021-08-22-125515_todos/: down.sql  up.sql
migrations/2021-08-31-112313_create_users/: up.sql
rvp/: Dockerfile  default.conf  nginx.conf
src/: config_initializer.rs  lib.rs  main.rs  routes.rs  schema.rs  util.rs
src/controllers/: todos.rs
src/models/: todo.rs
templates/: index.html
