[package]
name = "rust_actixweb_boilerplate"
version = "0.1.0"
edition = "2018"
authors = ["Norio4"]
categories = ["rust", "actix_web", "diesel", "boilerplate"]
license = "MIT"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
thiserror = "1.0.26"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"]}
env_logger = "0.9.0"
diesel_migrations = "1.4.0"
actix-cors = "0.5.4"
