[package]
name = "rust_actixweb_boilerplate"
version = "0.1.0"
edition = "2021"
authors = ["Norio4"]
categories = ["rust", "actix_web", "diesel", "boilerplate"]
license = "MIT"

[dependencies]
# Web Server
actix-rt = "2"
actix-web = { version = "4.0.0-beta.18", default_features = false }
actix-cors = "0.6.0-beta.7"

askama = "0.10.5"
thiserror = "1.0.26"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"]}
env_logger = "0.9.0"
diesel_migrations = "1.4.0"
